--- a/src/style.css
+++ b/src/style.css
@@ -147,8 +147,8 @@ body {
   height: 200px;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(20px);
-  -webkit-mask: url('/src/assets/images/logo.png');
-  mask: url('/src/assets/images/logo.png');
+  -webkit-mask: url('./src/assets/images/logo.png');
+  mask: url('./src/assets/images/logo.png');
   -webkit-mask-size: contain;
   mask-size: contain;
   -webkit-mask-repeat: no-repeat;
